downgraded to java 1.8